# flask-casbin-redis-watcher

./: README.md  example-bitbucket-pipelines.yml  pyproject.toml  tox.ini
casbin_redis_watcher/: __init__.py  watcher.py
tests/: test_redis_watcher.py
